--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-node_modules/
+/node_modules/
 /test-results/
 /playwright-report/
 /playwright/.cache/
 .idea
-state/
-.env
+/state/
+/state/user-state.json
