--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Playwright testing",
   "main": "index.js",
   "scripts": {
-    "test": "npx playwright test",
+    "test": "npx playwright test --project=main",
+    "test:api": "npx playwright test --project=api",
     "test:debug": "npx playwright test --debug",
     "test:positive": "npx playwright test -c ./playwright.config.positive.js",
     "test:negative": "npx playwright test -c ./playwright.config.negative.js",
@@ -14,12 +15,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "devDependencies": {
     "@playwright/test": "^1.39.0",
     "@types/node": "^20.8.9"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "axios": "^1.6.2",
+    "axios-cookiejar-support": "^4.0.7",
+    "dotenv": "^16.3.1",
+    "got": "^13.0.0",
+    "tough-cookie": "^4.1.3"
   }
 }
