--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios-cookiejar-support": "^4.0.7",
     "dotenv": "^16.3.1",
     "got": "^13.0.0",
-    "tough-cookie": "^4.1.3"
+    "tough-cookie": "^4.1.3",
+    "zod": "^3.22.4"
   }
 }
