--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,7 @@ services:
       ENV: ${ENV}
     build:
       context: .
+      args:
+        HTTP_CREDENTIALS_USERNAME: ${HTTP_CREDENTIALS_USERNAME}
+        HTTP_CREDENTIALS_PASSWORD: ${HTTP_CREDENTIALS_PASSWORD}
 
