--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,8 @@ jobs:
       - name: "Run e2e tests"
         run: |
           HTTP_CREDENTIALS_USERNAME=${{secrets.HTTP_CREDENTIALS_USERNAME}} HTTP_CREDENTIALS_PASSWORD=${{secrets.HTTP_CREDENTIALS_PASSWORD}} docker-compose up --exit-code-from auto-tests
+      - name: "Upload artifacts"
+        uses: actions/upload-artifact@v3
+        with:
+            name: github-pages
+            path: playwright-report/
