--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -19,12 +19,13 @@ jobs:
       - name: "Install dependencies"
         run: npm ci
       - name: "Run tests"
-        run: npx playwright test
+        run: npx playwright test --project=ui-example
         env:
           HTTP_CREDENTIALS_USERNAME: ${{secrets.HTTP_CREDENTIALS_USERNAME}}
           HTTP_CREDENTIALS_PASSWORD: ${{secrets.HTTP_CREDENTIALS_PASSWORD}}
           ENV: 'stage'
       - name: "Upload artifacts"
+        if: ${{ always() }}
         uses: actions/upload-artifact@v3
         with:
             name: github-pages
